--- a/src/Hosted/Hosted.fsproj
+++ b/src/Hosted/Hosted.fsproj
@@ -13,6 +13,7 @@
     <Content Include="research.html" />
     <Content Include="consulting.html" />
     <Content Include="careers.html" />
+    <Content Include="openPosition.html" />
     <Content Include="assets\custom.css" />
     <Content Include="assets\skin.css" />
     <Content Include="userbloglist.html" />
