--- a/src/Hosted/wsconfig.json
+++ b/src/Hosted/wsconfig.json
@@ -1,5 +1,6 @@
 ﻿{
   "$schema": "https://websharper.com/wsconfig.schema.json",
   "project": "site",
-  "outputDir": "."
+  "outputDir": ".",
+  "sourceMap": true
 }
