#7 Update scripts for more granular handling of processes, remove npm related script execution from f# projects

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           dotnet-version: '3.1.x'
       - run: |
+          bash ./install.sh -buildonly
           bash ./build.sh
 
       - name: Deploy 🚀
