--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build",
+            "label": "Build Solution in Release mode",
             "type": "shell",
             "command": "./build.sh",
             "windows": {
@@ -17,11 +17,11 @@
             }
         },
         {
-            "label": "Build (Debug)",
+            "label": "Build Solution in Debug mode",
             "type": "shell",
-            "command": "./build.sh debug",
+            "command": "./build.sh -deb",
             "windows": {
-                "command": ".\\build.ps1 debug"
+                "command": ".\\build.ps1 -deb"
             },
             "group": "build",
             "presentation": {
@@ -30,7 +30,33 @@
             }
         },
         {
-            "label": "Install",
+            "label": "Build Project in Debug mode",
+            "type": "shell",
+            "command": "./build.sh -deb -project ${input:project}",
+            "windows": {
+                "command": ".\\build.ps1 -deb -project ${input:project}"
+            },
+            "group": "build",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            }
+        },
+        {
+            "label": "Build Project in Release mode",
+            "type": "shell",
+            "command": "./build.sh -project ${input:project}",
+            "windows": {
+                "command": ".\\build.ps1 -project ${input:project}"
+            },
+            "group": "build",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            }
+        },
+        {
+            "label": "Install with tools",
             "type": "shell",
             "command": "./install.sh",
             "windows": {
@@ -43,11 +69,11 @@
             }
         },
         {
-            "label": "Install with tools",
+            "label": "Install",
             "type": "shell",
-            "command": "./install.sh --buildonly",
+            "command": "./install.sh -buildonly",
             "windows": {
-                "command": ".\\install.ps1 --buildOnly"
+                "command": ".\\install.ps1 -buildOnly"
             },
             "group": "build",
             "presentation": {
@@ -56,7 +82,7 @@
             }
         },
         {
-            "label": "Run",
+            "label": "Run Hosted",
             "type": "shell",
             "command": "./run.sh",
             "windows": {
@@ -67,6 +93,44 @@
                 "reveal": "always",
                 "panel": "new"
             }
+        },
+        {
+            "label": "Serve as an offline sitelet",
+            "type": "shell",
+            "command": "./run.sh",
+            "windows": {
+                "command": ".\\run.ps1"
+            },
+            "group": "build",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            }
+        },
+        {
+            "label": "CSS Server",
+            "type": "shell",
+            "command": "./grunt-watch.sh",
+            "windows": {
+                "command": ".\\grunt-watch.ps1"
+            },
+            "group": "build",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            }
+        }
+    ],
+    "inputs": [
+        {
+            "type": "pickString",
+            "id": "project",
+            "description": "Which project you want to build?",
+            "options": [
+                "client",
+                "hosted",
+                "website"
+            ]
         }
     ]
 }
