--- a/src/Hosted/package.json
+++ b/src/Hosted/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^5.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.1.0",
     "node-sass": "^4.14.1",
     "uglify-js": "^3.10.0"
