--- a/src/Hosted/package.json
+++ b/src/Hosted/package.json
@@ -15,5 +15,7 @@
     "grunt-sass": "^3.1.0",
     "uglify-js": "^3.10.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-sass": "^5.0.0"
+  }
 }
