--- a/src/Hosted/Hosted.fsproj
+++ b/src/Hosted/Hosted.fsproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="trainings\base.html" />
+    <Content Include="trainings\functional-reactive.html" />
+    <Content Include="trainings\web-and-mobile.html" />
+    <Content Include="trainings\2-days-to-fsharp.html" />
     <Content Include="posts/**/*.*" />
     <Compile Include="Main.fs" />
     <Compile Include="Startup.fs" />
@@ -13,8 +17,6 @@
     <Content Include="consulting.html" />
     <Content Include="careers.html" />
     <Content Include="openPosition.html" />
-    <Content Include="fsharpTraining.html" />
-    <Content Include="webTraining.html" />
     <None Include="assets\custom.scss" />
     <Content Include="assets\custom.css" />
     <Content Include="assets\skin.css" />
