#19 #9 - Links to the main IntelliFactory tools. li links into snippets.

--- a/src/Hosted/Hosted.fsproj
+++ b/src/Hosted/Hosted.fsproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <Content Include="jobs\202102-fsharp-intern.html" />
     <Content Include="jobs\202102-fsharp-web-developer.html" />
+    <Content Include="tutorial-link-snippet.html" />
     <Content Include="trainings\fsharp-basics.html" />
     <Content Include="posts/**/*.*" />
     <Compile Include="Main.fs" />
