Fix #26 - Add common metatags to blog pages

--- a/src/Hosted/config.yml
+++ b/src/Hosted/config.yml
@@ -1,4 +1,4 @@
-serverUrl: https://intellifactory.com
+serverUrl: https://intellifactorylabs.com
 shortTitle: IntelliFactory
 title: IntelliFactory Blog
 description: Building F# applications since 2004
