--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -14,11 +14,15 @@
   </Target>
 
   <ItemGroup>
-    <PackageReference Include="WebSharper" Version="4.6.7.408" />
-    <PackageReference Include="WebSharper.FSharp" Version="4.6.7.408" />
-    <PackageReference Include="WebSharper.Google.Maps" Version="4.6.0.164" />    
-    <PackageReference Include="WebSharper.HighlightJS" Version="4.6.0.188" />
-    <PackageReference Include="WebSharper.UI" Version="4.6.3.219" />
+    <PackageReference Include="WebSharper" Version="4.7.3.446" />
+    <PackageReference Include="WebSharper.FSharp" Version="4.7.3.446" />
+    <PackageReference Include="WebSharper.Google.Maps" Version="4.7.2.182" />    
+    <PackageReference Include="WebSharper.HighlightJS" Version="4.7.2.208" />
+    <PackageReference Include="WebSharper.UI" Version="4.7.2.243" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
