--- a/src/Hosted/package.json
+++ b/src/Hosted/package.json
@@ -12,8 +12,7 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^5.0.0",
     "grunt-sass": "^3.1.0",
-    "node-sass": "^4.14.1",
+    "sass": "^1.94.2",
     "uglify-js": "^3.10.0"
-  },
-  "dependencies": {}
+  }
 }
